All button and footer list error solved, color contrast

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ ul {
 button {
   border-radius: 5px;
   padding: 17px 30px;
-  background: #27ae60;
+  background: #166437;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -115,7 +115,7 @@ img {
 .btn5 {
   border-radius: 50px;
   padding: 20px 40px;
-  color: #27ae60;
+  color: #166437;
   font-size: 20px;
   font-weight: 400;
   border: 5px solid #27ae601f;
