--- a/src/components/common/footer/footer.css
+++ b/src/components/common/footer/footer.css
@@ -1,5 +1,5 @@
 .footerContact {
-  background-color: #27ae60;
+  background-color: #166437;
   padding: 40px 0;
   color: #fff;
 }
@@ -23,7 +23,7 @@ footer h2 {
   font-weight: 500;
 }
 footer p {
-  color: grey;
+  color: #c2c2c2;
   margin: 20px 0;
 }
 footer input {
@@ -41,7 +41,7 @@ footer ul {
 }
 footer ul li {
   display: block;
-  color: grey;
+  color: #c2c2c2;
   margin-bottom: 20px;
 }
 .legal {
