--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -16,12 +16,12 @@ header a {
   font-weight: 500;
 }
 header a:hover {
-  color: #27ae60;
+  color:  #166437;
 }
 header span {
   width: auto;
   padding: 0px 6px;
-  background: #27ae60;
+  background: #166437;
   border-radius: 50px;
   color: #ffffff;
   margin-right: 4px;
@@ -56,7 +56,7 @@ header .toggle {
     top: 10vh;
     left: 0;
     width: 100%;
-    background-color: #27ae60;
+    background-color:  #166437;
     padding: 20px;
   }
   header li a {
